kubernetes/overlays/prod/dummy-strategy/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-strategy
  namespace: trading-apps
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: dummy-strategy
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1500m"
